Change: 프로젝트 검색 방식 수정